--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/uber/style.css">
     <script src="https://kit.fontawesome.com/776a079dd3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -79,14 +79,14 @@ Uber for bussiness
 <div class="ride">
     <div class="uber">
         <div class="auto">
-             <img src="/1.png" alt="">        <div>
+             <img src="/uber/1.png" alt="">        <div>
             <h2>Uber Auto</h2>
             <p>Get affourdable under auto ride with no hangling.</p>
         </div>
         <!-- </div> -->
     
     <!-- <div class="auto"> -->
-<img src="/2.png" alt="">        <div>
+<img src="/uber/2.png" alt="">        <div>
             <h2>Uber Moto</h2>
             <p>Get affourdable under auto ride with no hangling.</p>
         </div>
@@ -94,14 +94,14 @@ Uber for bussiness
     </div>
     <div class="uber">
         <div class="auto">
-<img src="/3.png" alt="">        <div>
+<img src="/uber/3.png" alt="">        <div>
             <h2>Uber Auto</h2>
             <p>Get affourdable under auto ride with no hangling.</p>
         </div>
         <!-- </div> -->
     
     <!-- <div class="auto"> -->
-        <img src="/4.png" alt="">         <div>
+        <img src="/uber/4.png" alt="">         <div>
             <h2>Uber Moto</h2>
             <p>Get affourdable under auto ride with no hangling.</p>
         </div>
@@ -117,11 +117,11 @@ Uber for bussiness
 
 <div class="safe">
     <div class="img">
-        <img src="/5.png" alt="">         <h3>our commitment to your safety</h3>
+        <img src="/uber/5.png" alt="">         <h3>our commitment to your safety</h3>
         <p>With every safety feature and every standard in our Community Guidelines,<br> we're committed to helping to create a safe environment for our users.</p>
     </div>
     <div class="img">
-        <img src="/6.png" alt="">         <h3>setting 10,000+cities in motion</h3>
+        <img src="/uber/6.png" alt="">         <h3>setting 10,000+cities in motion</h3>
         <p>The app is available in thousands of cities worldwide, so you can request a<br> ride even when you’re far from home.</p>
     </div>
 </div>
@@ -164,10 +164,10 @@ Uber for bussiness
     <h1>There's more to love in the apps</h1>
     <div class="down">
         <div class="imgs">
-            <img src="/7.png" alt="">             <p>Download the uber App</p>
+            <img src="/uber/7.png" alt="">             <p>Download the uber App</p>
         </div>
         <div class="imgs">
-            <img src="/8.png" alt="">             <p>Download the uber app</p>
+            <img src="/uber/8.png" alt="">             <p>Download the uber app</p>
         </div>
     </div>
 </div>
