--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Uber for bussiness
     <h1>There's more to love in the apps</h1>
     <div class="down">
         <div class="imgs">
-            <img src="/uber/7.png" alt="">             <p>Download the uber App</p>
+            <img src="uber/7.png" alt="">             <p>Download the uber App</p>
         </div>
         <div class="imgs">
             <img src="/uber/8.png" alt="">             <p>Download the uber app</p>
